--- a/NE_proteomics_papers.ipynb
+++ b/NE_proteomics_papers.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "id": "f2b43cc9-f745-4e14-931f-ecc8bf24658b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, re, requests, json, openpyxl\n",
+    "import os, re, requests, json, openpyxl, warnings\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from urllib.request import urlopen\n",
-    "from time import sleep"
+    "from time import sleep\n",
+    "\n",
+    "warnings.filterwarnings('ignore')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e0902934-01f7-405a-bd9e-b3e8ffc837b5",
    "metadata": {},
    "outputs": [],
@@ -183,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 22,
    "id": "80decb81-feac-41f8-8849-2ea542c5118b",
    "metadata": {},
    "outputs": [],
@@ -194,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 23,
    "id": "05bbf613-1c44-4675-bbc7-5a54b9ce4290",
    "metadata": {},
    "outputs": [
@@ -210,7 +212,7 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 24,
    "id": "03b05796-c5db-4abc-8774-9a721860601b",
    "metadata": {
     "tags": []
@@ -236,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 25,
    "id": "bbc277ed-97c9-4882-b289-27728df32238",
    "metadata": {
     "tags": []
@@ -264,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 26,
    "id": "afeaee78-3304-4852-b39b-44bd68821861",
    "metadata": {},
    "outputs": [
@@ -274,7 +276,7 @@
        "119"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 27,
    "id": "15a797a3-828b-47e1-8261-4fd438f9c531",
    "metadata": {},
    "outputs": [],
@@ -295,12 +297,13 @@
     "# #47 should be MARCH5\n",
     "df.iloc[14, 1] = 'SLC22A24'\n",
     "df.iloc[18, 1] = 'VMA21'\n",
-    "df.iloc[74, 1] = 'MARCH5'"
+    "df.iloc[47, 1] = 'MARCH5'\n",
+    "df.iloc[97, 1] = 'ATL3'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 28,
    "id": "b65d2441-67b5-4ff4-b755-f6aebefedf12",
    "metadata": {},
    "outputs": [],
@@ -313,92 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
-   "id": "84727ec9-9d2b-41aa-ba93-531ff2501b91",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>1</th>\n",
-       "      <th>tissue</th>\n",
-       "      <th>gene name</th>\n",
-       "      <th>NE:MM ratio by dNSAF</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>114</th>\n",
-       "      <td>Original NETs (pre-MudPIT proteomics)</td>\n",
-       "      <td>UNC84B</td>\n",
-       "      <td>74.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>115</th>\n",
-       "      <td>Original NETs (pre-MudPIT proteomics)</td>\n",
-       "      <td>SYNE1</td>\n",
-       "      <td>INF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>116</th>\n",
-       "      <td>Original NETs (pre-MudPIT proteomics)</td>\n",
-       "      <td>SYNE2</td>\n",
-       "      <td>INF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>117</th>\n",
-       "      <td>Original NETs (pre-MudPIT proteomics)</td>\n",
-       "      <td>POM121C</td>\n",
-       "      <td>INF</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>118</th>\n",
-       "      <td>Original NETs (pre-MudPIT proteomics)</td>\n",
-       "      <td>NUP210</td>\n",
-       "      <td>INF</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "1                                   tissue gene name NE:MM ratio by dNSAF\n",
-       "114  Original NETs (pre-MudPIT proteomics)    UNC84B                74.71\n",
-       "115  Original NETs (pre-MudPIT proteomics)     SYNE1                  INF\n",
-       "116  Original NETs (pre-MudPIT proteomics)     SYNE2                  INF\n",
-       "117  Original NETs (pre-MudPIT proteomics)   POM121C                  INF\n",
-       "118  Original NETs (pre-MudPIT proteomics)    NUP210                  INF"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 29,
    "id": "d07d87dc-28df-493a-bd8a-c78e0672873d",
    "metadata": {},
    "outputs": [],
@@ -439,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 31,
    "id": "f753fc2e-23da-41f8-96d6-7c99306a6a77",
    "metadata": {},
    "outputs": [],
@@ -450,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 32,
    "id": "daad6fb7-7103-4e94-b48f-ca275181462b",
    "metadata": {},
    "outputs": [],
