--- a/NE_proteomics_papers.ipynb
+++ b/NE_proteomics_papers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 1,
    "id": "f2b43cc9-f745-4e14-931f-ecc8bf24658b",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "e0902934-01f7-405a-bd9e-b3e8ffc837b5",
    "metadata": {},
    "outputs": [],
@@ -173,6 +173,128 @@
    "source": [
     "### See Schirmer2003.ipynb\n",
     "### Output is Schirmer2003/Output.csv"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2972547a-92b5-4e20-b935-f1247d64ed83",
+   "metadata": {},
+   "source": [
+    "# Korfali et al 2010: Mouse leukocytes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "1851fe79-b9de-468f-82f8-122b0141780d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Excel import\n",
+    "df_Korfali_2010 = pd.read_excel('./SourceData/Korfali_2010/rk1-139_fromTableS5.xlsx')\n",
+    "\n",
+    "# convert to df\n",
+    "df_Korfali_2010= pd.DataFrame(df_Korfali_2010.iloc[1:, 1])\n",
+    "df_Korfali_2010.columns = ['Gene_name']\n",
+    "df_Korfali_2010 = df_Korfali_2010.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "6e3d161c-dd4f-41ee-b7c0-34653d5dc865",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Manual inspection and correction\n",
+    "df_Korfali_2010.iloc[15, 0] = 'DHRS7'\n",
+    "df_Korfali_2010.iloc[39, 0] = 'NOC2L'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "7b36a2bc-10ed-41e4-b35b-ddfeb258e714",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 Q9UH99 SUN2\n",
+      "40 Q3LXA3 TKFC\n",
+      "80 Q6NXT6 TAPT1\n",
+      "120 Q9Y2W6 TDRKH\n"
+     ]
+    }
+   ],
+   "source": [
+    "# uniprot API URL\n",
+    "WEBSITE_API = \"https://rest.uniprot.org/uniprotkb/\"\n",
+    "\n",
+    "# organism id\n",
+    "organism_id_list = {'Homo sapiens': '9606', 'Mus musculus': '10090'}\n",
+    "organism_id = organism_id_list['Homo sapiens']\n",
+    "\n",
+    "# find Uniprot Entry and gene names for each gene\n",
+    "for i in range(len(df_Korfali_2010)):\n",
+    "    \n",
+    "    # gene name\n",
+    "    gene = df_Korfali_2010.iloc[i, 0]\n",
+    "\n",
+    "    try:\n",
+    "        # get response with gene name the query\n",
+    "        r = get_url(f'{WEBSITE_API}/search?query=gene:{gene}+AND+organism_id:{organism_id}&fields=accession,gene_names')\n",
+    "        result = r.json()['results'][0]\n",
+    "        \n",
+    "        ## get human or mouse entry\n",
+    "        entry_converted = result['primaryAccession']\n",
+    "        ## get gene name and check the names match between human's or mouse's and the given organism's\n",
+    "        gene_obtained = result['genes'][0]['geneName']['value']\n",
+    "    \n",
+    "    except:\n",
+    "        entry_converted = 'Not_found'\n",
+    "    \n",
+    "    # Put the obtained Entry and gene name\n",
+    "    df_Korfali_2010.loc[i, 'Entry_Korfali_2010'] = entry_converted\n",
+    "    df_Korfali_2010.loc[i, 'Gene_name_obtained'] = gene_obtained\n",
+    "    \n",
+    "    if i % 40 == 0: print(i, entry_converted, gene_obtained)\n",
+    "    \n",
+    "    # take a break and go next\n",
+    "    sleep(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "5d884c88-13c0-4282-9210-172bb2a5c922",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Manually check the result\n",
+    "# df_Korfali_2010.head(n=50)\n",
+    "# # df_Korfali_2010.tail(n=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "c32c75b9-4e7c-4b3e-8632-199f15a67cea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Korfali_2010 = df_Korfali_2010.drop(['Gene_name'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "518c8bc5-6724-4ecc-b491-3d5c4d511ac2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_Korfali_2010.to_csv('./IntermediateProducts/Korfali_2010.csv', index=False)"
    ]
   },
   {
