--- a/NE_proteomics_papers.ipynb
+++ b/NE_proteomics_papers.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "f2b43cc9-f745-4e14-931f-ecc8bf24658b",
    "metadata": {},
    "outputs": [],
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "e0902934-01f7-405a-bd9e-b3e8ffc837b5",
    "metadata": {},
    "outputs": [],
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "1851fe79-b9de-468f-82f8-122b0141780d",
    "metadata": {},
    "outputs": [],
@@ -201,19 +201,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "id": "6e3d161c-dd4f-41ee-b7c0-34653d5dc865",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Manual inspection and correction\n",
     "df_Korfali_2010.iloc[15, 0] = 'DHRS7'\n",
-    "df_Korfali_2010.iloc[39, 0] = 'NOC2L'"
+    "df_Korfali_2010.iloc[39, 0] = 'NOC2L'\n",
+    "df_Korfali_2010.iloc[58, 0] = 'METTL7A'\n",
+    "df_Korfali_2010.iloc[104, 0] = 'TMEM189'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "id": "7b36a2bc-10ed-41e4-b35b-ddfeb258e714",
    "metadata": {},
    "outputs": [
@@ -254,6 +256,7 @@
     "    \n",
     "    except:\n",
     "        entry_converted = 'Not_found'\n",
+    "        gene_obtained = 'Not_found'\n",
     "    \n",
     "    # Put the obtained Entry and gene name\n",
     "    df_Korfali_2010.loc[i, 'Entry_Korfali_2010'] = entry_converted\n",
@@ -279,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "id": "c32c75b9-4e7c-4b3e-8632-199f15a67cea",
    "metadata": {},
    "outputs": [],
@@ -289,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 16,
    "id": "518c8bc5-6724-4ecc-b491-3d5c4d511ac2",
    "metadata": {},
    "outputs": [],
