Reduced length using my_utils

--- a/NE_proteomics_papers.ipynb
+++ b/NE_proteomics_papers.ipynb
@@ -2,39 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 38,
    "id": "f2b43cc9-f745-4e14-931f-ecc8bf24658b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os, re, requests, json, openpyxl, warnings\n",
+    "import os, re, requests, json, openpyxl, warnings, importlib\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "from urllib.request import urlopen\n",
     "from time import sleep\n",
     "\n",
+    "from my_utils import *\n",
+    "\n",
     "warnings.filterwarnings('ignore')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "e0902934-01f7-405a-bd9e-b3e8ffc837b5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_url(url, **kwargs):\n",
-    "    '''\n",
-    "    Obatin a response from a given url\n",
-    "    '''\n",
-    "    response = requests.get(url, **kwargs);\n",
-    "\n",
-    "    if not response.ok:\n",
-    "        print(response.text)\n",
-    "        response.raise_for_status()\n",
-    "        sys.exit()\n",
-    "\n",
-    "    return response"
    ]
   },
   {
@@ -47,9 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "id": "6382f45f-e6eb-4193-9ceb-f5053b1facdd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -59,14 +42,66 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-20-ad279f51e5a2>:2: DeprecationWarning: Call to deprecated function get_sheet_names (Use wb.sheetnames).\n",
-      "  print(wb.get_sheet_names())\n",
-      "<ipython-input-20-ad279f51e5a2>:4: DeprecationWarning: Call to deprecated function get_sheet_by_name (Use wb[sheetname]).\n",
-      "  sheet = wb.get_sheet_by_name('Extracted')\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gene_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>UNC84B</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>TOR1AIP1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>LBR</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>UNC84A</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NUP210</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Gene_name\n",
+       "0    UNC84B\n",
+       "1  TOR1AIP1\n",
+       "2       LBR\n",
+       "3    UNC84A\n",
+       "4    NUP210"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -82,79 +117,37 @@
     "df_wilkie = pd.DataFrame(_df_wilkie.iloc[3:, 1])\n",
     "df_wilkie.columns = ['Gene_name']\n",
     "df_wilkie = df_wilkie.reset_index(drop=True)\n",
-    "df_wilkie"
+    "df_wilkie.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "id": "afd89bed-fdd5-4fd0-a561-0d27292c457b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uniprot API URL\n",
-    "WEBSITE_API = \"https://rest.uniprot.org/uniprotkb/\"\n",
-    "\n",
-    "# organism id\n",
-    "organism_id_list = {'Homo sapiens': '9606', 'Mus musculus': '10090'}\n",
-    "organism_id = organism_id_list['Homo sapiens']\n",
-    "\n",
-    "# find Uniprot Entry and gene names for each gene\n",
+    "# find UniProt Entry and UniProt-registered gene names\n",
     "for i in range(len(df_wilkie)):\n",
     "    \n",
-    "    # gene name\n",
     "    gene = df_wilkie.iloc[i, 0]\n",
-    "\n",
-    "    try:\n",
-    "        # get response with gene name the query\n",
-    "        r = get_url(f'{WEBSITE_API}/search?query=gene:{gene}+AND+organism_id:{organism_id}&fields=accession,gene_names')\n",
-    "        result = r.json()['results'][0]\n",
-    "        \n",
-    "        ## get human or mouse entry\n",
-    "        entry_converted = result['primaryAccession']\n",
-    "        ## get gene name and check the names match between human's or mouse's and the given organism's\n",
-    "        gene_obtained = result['genes'][0]['geneName']['value']\n",
+    "    entry_converted, gene_obtained = get_UniProtEntry(gene)\n",
     "    \n",
-    "    except:\n",
-    "        entry_converted = 'Not_found'\n",
-    "    \n",
-    "    # Put the obtained Entry and gene name\n",
     "    df_wilkie.loc[i, 'Entry_Wilkie'] = entry_converted\n",
     "    df_wilkie.loc[i, 'Gene_name_obtained'] = gene_obtained\n",
     "    \n",
-    "    # take a break and go next\n",
     "    sleep(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "6a8eacc9-94ef-40f2-a70a-640841e9cc83",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Manually check the result\n",
-    "# df_wilkie.head(n=50)\n",
-    "# df_wilkie.tail(n=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "9f9e54a0-9fde-4852-b0a8-ebd13bd9f663",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_wilkie = df_wilkie.drop(['Gene_name'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 48,
-   "id": "cd35690e-6f1e-41e4-bc39-7b14bd5bd2c0",
+   "id": "d5b080a3-2050-4e1c-90b1-15860d10b955",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clean and export\n",
+    "df_wilkie = df_wilkie.drop(['Gene_name'], axis=1)\n",
     "df_wilkie.to_csv('./IntermediateProducts/Wilkie_2010.csv', index=False)"
    ]
   },
@@ -185,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 46,
    "id": "1851fe79-b9de-468f-82f8-122b0141780d",
    "metadata": {},
    "outputs": [],
@@ -193,7 +186,7 @@
     "# Excel import\n",
     "df_Korfali_2010 = pd.read_excel('./SourceData/Korfali_2010/rk1-139_fromTableS5.xlsx')\n",
     "\n",
-    "# convert to df\n",
+    "# Convert to df\n",
     "df_Korfali_2010= pd.DataFrame(df_Korfali_2010.iloc[1:, 1])\n",
     "df_Korfali_2010.columns = ['Gene_name']\n",
     "df_Korfali_2010 = df_Korfali_2010.reset_index(drop=True)"
@@ -201,12 +194,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 47,
    "id": "6e3d161c-dd4f-41ee-b7c0-34653d5dc865",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Manual inspection and correction\n",
+    "# Manual inspection and correction of gene names\n",
     "df_Korfali_2010.iloc[15, 0] = 'DHRS7'\n",
     "df_Korfali_2010.iloc[39, 0] = 'NOC2L'\n",
     "df_Korfali_2010.iloc[58, 0] = 'METTL7A'\n",
@@ -215,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 48,
    "id": "7b36a2bc-10ed-41e4-b35b-ddfeb258e714",
    "metadata": {},
    "outputs": [
@@ -231,72 +224,29 @@
     }
    ],
    "source": [
-    "# uniprot API URL\n",
-    "WEBSITE_API = \"https://rest.uniprot.org/uniprotkb/\"\n",
-    "\n",
-    "# organism id\n",
-    "organism_id_list = {'Homo sapiens': '9606', 'Mus musculus': '10090'}\n",
-    "organism_id = organism_id_list['Homo sapiens']\n",
-    "\n",
-    "# find Uniprot Entry and gene names for each gene\n",
+    "# find UniProt Entry and UniProt-registerd gene names\n",
     "for i in range(len(df_Korfali_2010)):\n",
     "    \n",
-    "    # gene name\n",
     "    gene = df_Korfali_2010.iloc[i, 0]\n",
-    "\n",
-    "    try:\n",
-    "        # get response with gene name the query\n",
-    "        r = get_url(f'{WEBSITE_API}/search?query=gene:{gene}+AND+organism_id:{organism_id}&fields=accession,gene_names')\n",
-    "        result = r.json()['results'][0]\n",
-    "        \n",
-    "        ## get human or mouse entry\n",
-    "        entry_converted = result['primaryAccession']\n",
-    "        ## get gene name and check the names match between human's or mouse's and the given organism's\n",
-    "        gene_obtained = result['genes'][0]['geneName']['value']\n",
+    "    entry_converted, gene_obtained = get_UniProtEntry(gene)\n",
     "    \n",
-    "    except:\n",
-    "        entry_converted = 'Not_found'\n",
-    "        gene_obtained = 'Not_found'\n",
-    "    \n",
-    "    # Put the obtained Entry and gene name\n",
     "    df_Korfali_2010.loc[i, 'Entry_Korfali_2010'] = entry_converted\n",
     "    df_Korfali_2010.loc[i, 'Gene_name_obtained'] = gene_obtained\n",
     "    \n",
     "    if i % 40 == 0: print(i, entry_converted, gene_obtained)\n",
     "    \n",
-    "    # take a break and go next\n",
     "    sleep(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "5d884c88-13c0-4282-9210-172bb2a5c922",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Manually check the result\n",
-    "# df_Korfali_2010.head(n=50)\n",
-    "# # df_Korfali_2010.tail(n=50)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "c32c75b9-4e7c-4b3e-8632-199f15a67cea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_Korfali_2010 = df_Korfali_2010.drop(['Gene_name'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 16,
-   "id": "518c8bc5-6724-4ecc-b491-3d5c4d511ac2",
+   "id": "1f0209ef-f327-42a8-a7e6-ebd563e2a0fe",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Clean and export\n",
+    "df_Korfali_2010 = df_Korfali_2010.drop(['Gene_name'], axis=1)\n",
     "df_Korfali_2010.to_csv('./IntermediateProducts/ProteomePapers/Korfali_2010.csv', index=False)"
    ]
   },
@@ -310,18 +260,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 57,
    "id": "80decb81-feac-41f8-8849-2ea542c5118b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# S4 was extracted beforehand to a single file because the whole xlsx is extremely heavy\n",
-    "df = pd.read_excel('./SourceData/Korfali_2012/2012NUCLEUS0047R-SupTables_S4.xlsx')"
+    "df_Korfali_2012 = pd.read_excel('./SourceData/Korfali_2012/2012NUCLEUS0047R-SupTables_S4.xlsx')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 58,
    "id": "05bbf613-1c44-4675-bbc7-5a54b9ce4290",
    "metadata": {},
    "outputs": [
@@ -337,77 +287,56 @@
        "Name: 1, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# prepare column names\n",
-    "columns = df.iloc[1,[0,1,2,3,17,18]]\n",
+    "columns = df_Korfali_2012.iloc[1,[0,1,2,3,17,18]]\n",
     "columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "03b05796-c5db-4abc-8774-9a721860601b",
+   "execution_count": 53,
+   "id": "6b36fa74-0fa7-4e50-aba0-d79b1a7593d1",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "# Extract necessary cells\n",
-    "df = df.iloc[2:136,[0,1,2,3,17,18]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "bbc277ed-97c9-4882-b289-27728df32238",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
+    "df_Korfali_2012 = df_Korfali_2012.iloc[2:136,[0,1,2,3,17,18]]\n",
+    "\n",
     "# rename the columns\n",
-    "df.columns = columns\n",
+    "df_Korfali_2012.columns = columns\n",
     "\n",
     "# Fill in tissue data\n",
-    "df['tissue'] = df['tissue'].fillna(method='ffill')\n",
-    "df = df.dropna(axis=0)\n",
+    "df_Korfali_2012['tissue'] = df_Korfali_2012['tissue'].fillna(method='ffill')\n",
+    "df_Korfali_2012 = df_Korfali_2012.dropna(axis=0)\n",
     "\n",
     "# Reindex\n",
-    "df = df.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2fc19f11-a079-4740-aebe-8dc59de1ea81",
-   "metadata": {},
-   "source": [
-    "#### How many genes?"
+    "df_Korfali_2012 = df_Korfali_2012.reset_index(drop=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 55,
    "id": "afeaee78-3304-4852-b39b-44bd68821861",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "119"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of genes:  119\n"
+     ]
     }
    ],
    "source": [
-    "len(list(df['gene name'].unique()))"
+    "print(\"The number of genes: \", len(list(df_Korfali_2012['gene name'].unique())))"
    ]
   },
   {
@@ -417,13 +346,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Manual inspection and correction of gene names\n",
     "# #15 should be SLC22A24\n",
     "# #18 contains two names and only the latter VMA21 is needed\n",
     "# #47 should be MARCH5\n",
-    "df.iloc[14, 1] = 'SLC22A24'\n",
-    "df.iloc[18, 1] = 'VMA21'\n",
-    "df.iloc[47, 1] = 'MARCH5'\n",
-    "df.iloc[97, 1] = 'ATL3'"
+    "df_Korfali_2012.iloc[14, 1] = 'SLC22A24'\n",
+    "df_Korfali_2012.iloc[18, 1] = 'VMA21'\n",
+    "df_Korfali_2012.iloc[47, 1] = 'MARCH5'\n",
+    "df_Korfali_2012.iloc[97, 1] = 'ATL3'"
    ]
   },
   {
@@ -433,10 +363,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# print(df.columns)\n",
-    "\n",
     "# select columns\n",
-    "df = df[['tissue', 'gene name', 'NE:MM ratio by dNSAF']]"
+    "df_Korfali_2012 = df_Korfali_2012[['tissue', 'gene name', 'NE:MM ratio by dNSAF']]"
    ]
   },
   {
@@ -446,74 +374,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# uniprot API URL\n",
-    "WEBSITE_API = \"https://rest.uniprot.org/uniprotkb/\"\n",
-    "\n",
-    "# organism id\n",
-    "organism_id_list = {'Homo sapiens': '9606', 'Mus musculus': '10090'}\n",
-    "organism_id = organism_id_list['Homo sapiens']\n",
-    "\n",
-    "# find Uniprot Entry and gene names for each gene\n",
-    "for i in range(len(df)):\n",
+    "# find Uniprot Entry and UniProt-registered gene names\n",
+    "for i in range(len(df_Korfali_2012)):\n",
     "    \n",
-    "    # gene name\n",
-    "    gene = df.iloc[i, 1]\n",
-    "\n",
-    "    try:\n",
-    "        # get response with gene name the query\n",
-    "        r = get_url(f'{WEBSITE_API}/search?query=gene:{gene}+AND+organism_id:{organism_id}&fields=accession,gene_names')\n",
-    "        result = r.json()['results'][0]\n",
-    "        \n",
-    "        ## get human or mouse entry\n",
-    "        entry_converted = result['primaryAccession']\n",
-    "        ## get gene name and check the names match between human's or mouse's and the given organism's\n",
-    "        gene_obtained = result['genes'][0]['geneName']['value']\n",
+    "    gene = df_Korfali_2012.iloc[i, 1]\n",
+    "    entry_converted, gene_obtained = get_UniProtEntry(gene)\n",
     "    \n",
-    "    except:\n",
-    "        entry_converted = 'Not_found'\n",
+    "    df_Korfali_2012.loc[i, 'Entry_Korfali_2012'] = entry_converted\n",
+    "    df_Korfali_2012.loc[i, 'Gene_name_obtained'] = gene_obtained\n",
     "    \n",
-    "    # Put the obtained Entry and gene name\n",
-    "    df.loc[i, 'Entry_Korfali_2012'] = entry_converted\n",
-    "    df.loc[i, 'Gene_name_obtained'] = gene_obtained\n",
-    "    \n",
-    "    # take a break and go next\n",
     "    sleep(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "id": "f753fc2e-23da-41f8-96d6-7c99306a6a77",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# drop gene name obtained\n",
-    "df = df.drop(columns=['Gene_name_obtained'], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 32,
-   "id": "daad6fb7-7103-4e94-b48f-ca275181462b",
+   "id": "b9414fec-7a35-41a8-ba9f-a7899310f685",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Export\n",
+    "# Clean and export\n",
+    "df = df.drop(columns=['Gene_name_obtained'], axis=1)\n",
     "df.to_csv('./IntermediateProducts/ProteomePapers/Korfali_2012.csv', index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c179a60d-9751-4621-bfa5-6c6941b114cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -527,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
