Rerun with updated NE proteome

--- a/MemBrain_Find_Hs_protein.ipynb
+++ b/MemBrain_Find_Hs_protein.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "9a35a667-d2bb-438b-bcb8-1be1a1523f7e",
    "metadata": {
     "tags": []
@@ -330,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "f17ea124-e113-44ac-812b-3cd35e2c7565",
    "metadata": {},
    "outputs": [],
@@ -341,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "5ef07dee-ff74-47a6-a80f-14e5b77d4f30",
    "metadata": {
     "tags": []
@@ -360,65 +360,43 @@
       "600 TMEM61 Homo sapiens Q8N0U2\n",
       "700 BRICD5 Homo sapiens Q6PL45\n",
       "800 HHLA2 Homo sapiens Q9UM44\n",
-      "Error for gene name Unknown of Mus musculus in row 840: list index out of range\n",
       "900 Nrros Mus musculus Q86YC3\n",
+      "Error for gene name Unknown of Mus musculus in row 950: list index out of range\n",
       "1000 Zdhhc19 Mus musculus Q8WVZ1\n",
-      "Error for gene name Prss43 of Mus musculus in row 1020: list index out of range\n",
       "1100 Tomm70 Mus musculus O94826\n",
-      "Error for gene name Zfp36l3 of Mus musculus in row 1120: list index out of range\n",
-      "Error for gene name Olfr56 of Mus musculus in row 1160: list index out of range\n",
       "1200 Ms4a13 Mus musculus Q5J8X5\n",
-      "Error for gene name Vmn2r116 of Mus musculus in row 1260: list index out of range\n",
       "1300 PLPPR2 Bos taurus Q96GM1\n",
+      "Error for gene name COX8B of Bos taurus in row 1350: list index out of range\n",
       "1400 TMEM54 Bos taurus Q969K7\n",
-      "Error for gene name Unknown of Caenorhabditis elegans in row 1480: list index out of range\n",
       "Error for gene name clc-5 of Caenorhabditis elegans in row 1500: list index out of range\n",
       "1500 clc-5 Caenorhabditis elegans Not_found\n",
-      "Error for gene name sra-32 of Caenorhabditis elegans in row 1520: list index out of range\n",
-      "Error for gene name elo-3 of Caenorhabditis elegans in row 1540: list index out of range\n",
-      "Error for gene name ilcr-1 of Caenorhabditis elegans in row 1560: list index out of range\n",
-      "Error for gene name acp-1 of Caenorhabditis elegans in row 1580: list index out of range\n",
+      "Error for gene name daf-4 of Caenorhabditis elegans in row 1550: list index out of range\n",
       "Error for gene name nra-2 of Caenorhabditis elegans in row 1600: list index out of range\n",
       "1600 nra-2 Caenorhabditis elegans Not_found\n",
-      "Error for gene name Unknown of Caenorhabditis elegans in row 1620: list index out of range\n",
-      "Error for gene name cam-1 of Caenorhabditis elegans in row 1640: list index out of range\n",
-      "Error for gene name mtp-18 of Caenorhabditis elegans in row 1660: list index out of range\n",
-      "Error for gene name lagr-1 of Caenorhabditis elegans in row 1680: list index out of range\n",
+      "Error for gene name Unknown of Caenorhabditis elegans in row 1650: list index out of range\n",
       "Error for gene name Unknown of Caenorhabditis elegans in row 1700: list index out of range\n",
       "1700 Unknown Caenorhabditis elegans Not_found\n",
-      "Error for gene name moma-1 of Caenorhabditis elegans in row 1720: list index out of range\n",
-      "Error for gene name Unknown of Caenorhabditis elegans in row 1740: list index out of range\n",
-      "Error for gene name zig-1 of Caenorhabditis elegans in row 1760: list index out of range\n",
-      "Error for gene name Unknown of Caenorhabditis elegans in row 1780: list index out of range\n",
+      "Error for gene name prx-10 of Caenorhabditis elegans in row 1750: list index out of range\n",
       "Error for gene name Unknown of Caenorhabditis elegans in row 1800: list index out of range\n",
       "1800 Unknown Caenorhabditis elegans Not_found\n",
       "Error for gene name Klri2 of Rattus norvegicus in row 1900: list index out of range\n",
       "1900 Klri2 Rattus norvegicus Not_found\n",
-      "Error for gene name Timd2 of Rattus norvegicus in row 1920: list index out of range\n",
       "2000 TMEM196 Pongo abelii Q5HYL7\n",
       "2100 ATP1B4 Gallus gallus Q9UN42\n",
-      "Error for gene name noc4l-a of Xenopus laevis in row 2120: list index out of range\n",
       "Error for gene name frc of Drosophila melanogaster in row 2200: list index out of range\n",
       "2200 frc Drosophila melanogaster Not_found\n",
-      "Error for gene name Alp4 of Drosophila melanogaster in row 2220: list index out of range\n",
-      "Error for gene name Pal1 of Drosophila melanogaster in row 2260: list index out of range\n",
-      "Error for gene name gol of Drosophila melanogaster in row 2280: list index out of range\n",
+      "Error for gene name pes of Drosophila melanogaster in row 2250: list index out of range\n",
       "Error for gene name DppIII of Drosophila melanogaster in row 2300: list index out of range\n",
       "2300 DppIII Drosophila melanogaster Not_found\n",
-      "Error for gene name Kr-h2 of Drosophila melanogaster in row 2320: list index out of range\n",
-      "Error for gene name sturkopf of Drosophila melanogaster in row 2340: list index out of range\n",
+      "Error for gene name il1rapl1a of Danio rerio in row 2350: list index out of range\n",
       "2400 slc39a10 Danio rerio Q9ULF5\n",
-      "Error for gene name slc25a1a of Danio rerio in row 2420: list index out of range\n",
-      "Error for gene name eat-20 of Caenorhabditis briggsae in row 2480: list index out of range\n",
       "Error for gene name PAPI of Bombyx mori in row 2500: list index out of range\n",
       "2500 PAPI Bombyx mori Not_found\n",
       "HTTP Error for URL https://rest.uniprot.org/uniprotkb/search: 400 Bad Request\n",
-      "Error for gene name Unknown of Aedes aegypti in row 2540: list index out of range\n",
+      "Error for gene name FGFR of Strongylocentrotus purpuratus in row 2550: list index out of range\n",
       "HTTP Error for URL https://rest.uniprot.org/uniprotkb/search: 400 Bad Request\n",
       "2600 chrnd Tetronarce californica Q07001\n",
-      "Error for gene name SCRB16 of Anopheles gambiae in row 2640: list index out of range\n",
       "HTTP Error for URL https://rest.uniprot.org/uniprotkb/search: 400 Bad Request\n",
-      "Error for gene name Unknown of Coturnix japonica in row 2680: list index out of range\n",
       "Error for gene name Unknown of Drosophila persimilis in row 2700: list index out of range\n",
       "2700 Unknown Drosophila persimilis Not_found\n",
       "HTTP Error for URL https://rest.uniprot.org/uniprotkb/search: 400 Bad Request\n"
@@ -463,7 +441,7 @@
     "                entry_converted = 'Not_found(similar)'\n",
     "                similar_but_differ += 1\n",
     "        except Exception as e:\n",
-    "            if i % 20 == 0:\n",
+    "            if i % 50 == 0: # show error code only for selected ones\n",
     "                print(f\"Error for gene name {gene_name} of {organism_name} in row {i}: {e}\")\n",
     "            entry_converted = 'Not_found'\n",
     "            not_found += 1\n",
@@ -483,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "id": "b4ed9452-025e-4da9-a641-d5b0aab73cb7",
    "metadata": {
     "tags": []
@@ -494,8 +472,8 @@
      "output_type": "stream",
      "text": [
       "Number of genes that was originally Hs:  824\n",
-      "Total number of genes that was converted to Hs:  1155\n",
-      "Number of genes for which similar gene name was found in Hs:  81\n",
+      "Total number of genes that was converted to Hs:  1151\n",
+      "Number of genes for which similar gene name was found in Hs:  85\n",
       "Number of genes for which Hs homolog was not found:  673\n"
      ]
     }
@@ -509,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "d8650760-274d-45f0-8dac-cb431a510d91",
    "metadata": {},
    "outputs": [],
@@ -529,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py311",
    "language": "python",
    "name": "python3"
   },
@@ -543,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
